<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragments.instruction.InstructionFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/title_size25"
            android:layout_margin="@dimen/default_field_10margin"
            android:text="@string/hello_instruction" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/body_text_size"
            android:padding="@dimen/default_field_10margin"
            android:text="@string/welcome_text" />

        <Button
            android:id="@+id/button_next"
            android:layout_gravity="center"
            android:layout_margin="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_shop" />

    </LinearLayout>
</layout>